<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"><!--focusableInTouchMode="true" prevents cursor flash on textbox upon enter page-->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/wellimage_input"
        android:orientation="vertical"
        android:layout_width="953dp"
        android:layout_height="503dp"
        android:background="@drawable/well_parameters">

        <TextView
            android:id="@+id/display_TVD"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:text="@string/displayTVD"/>
        <TextView
            android:id="@+id/display_SurfaceCasing"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="320dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:text="@string/displaySurfaceCasing"/>
        <TextView
            android:id="@+id/display_IntermediateCasing"
            android:layout_below="@+id/display_SurfaceCasing"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="320dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:text="@string/displayIntermediateCasing"/>
        <TextView
            android:id="@+id/display_SlottedLiner"
            android:layout_toRightOf="@+id/display_IntermediateCasing"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:text="@string/displaySlottedLiner"/>
        <TextView
            android:id="@+id/display_WellLength"
            android:layout_below="@+id/display_SlottedLiner"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="550dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:text="@string/displayWellLength"/>
    </RelativeLayout>

    <Button android:id="@+id/well_parameters_advanced"
        android:layout_toRightOf="@+id/wellimage_input"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/button_advanced_params"
        android:onClick="goToParamsAdvanced"/>

    <TextView
        android:id="@+id/label_TVD"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/well_parameters_advanced"
        android:layout_marginLeft="953dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/editText_TVD"/>
    <EditText
        android:id="@+id/input_TVD"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_TVD"
        android:layout_marginLeft="953dp"
        android:paddingLeft="100dp"
        android:ems="10"
        android:textSize="24sp"
        android:text="@string/edittext_enter_data"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/label_SurfaceCasing"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/input_TVD"
        android:layout_marginLeft="953dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/editText_SurfaceCasing"/>
    <EditText
        android:id="@+id/input_SurfaceCasing"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_SurfaceCasing"
        android:layout_marginLeft="953dp"
        android:paddingLeft="100dp"
        android:ems="10"
        android:textSize="24sp"
        android:text="@string/edittext_enter_data"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/label_IntermediateCasing"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/input_SurfaceCasing"
        android:layout_marginLeft="953dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/editText_IntermediateCasing"/>
    <EditText
        android:id="@+id/input_IntermediateCasing"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_IntermediateCasing"
        android:layout_marginLeft="953dp"
        android:paddingLeft="100dp"
        android:ems="10"
        android:textSize="24sp"
        android:text="@string/edittext_enter_data"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/label_SlottedLiner"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/input_IntermediateCasing"
        android:layout_marginLeft="953dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/editText_SlottedLiner"/>
    <EditText
        android:id="@+id/input_SlottedLiner"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_SlottedLiner"
        android:layout_marginLeft="953dp"
        android:paddingLeft="100dp"
        android:ems="10"
        android:textSize="24sp"
        android:text="@string/edittext_enter_data"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <!--Well Length used to be a separate parameter, but now it's the sum of Surface Casing, Intermediate Casing, and Slotted Liner
        Therefore, the TextView and EditText for this field are no longer needed-->
    <!--TextView
        android:id="@+id/label_WellLength"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/input_SlottedLiner"
        android:layout_marginLeft="953dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/editText_WellLength"/>
    <EditText
        android:id="@+id/input_WellLength"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_WellLength"
        android:layout_marginLeft="953dp"
        android:paddingLeft="100dp"
        android:ems="10"
        android:text="@string/edittext_enter_data"
        android:textSize="24sp"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/-->
    <Button android:id="@+id/save"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/input_SlottedLiner"
        android:layout_marginLeft="953dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_data"
        android:textSize="24sp"
        android:onClick="save"/>
</RelativeLayout>